--- a/src/app/components/deposito-list/deposito-list.component.html
+++ b/src/app/components/deposito-list/deposito-list.component.html
@@ -28,7 +28,7 @@
             <td class="pr-0 text-center">
               <!-- Botón para mostrar el menú emergente -->
               <div class="dropdown dropleft">
-                <button type="button" class="btn btn-dark btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button type="button" class="btn btn-dark btn-small" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <i class="fas fa-ellipsis-v"></i>
                 </button>
                 <!-- Menú emergente -->
