--- a/src/app/components/articulo-list/articulo-list.component.html
+++ b/src/app/components/articulo-list/articulo-list.component.html
@@ -19,10 +19,10 @@
           <tr>
             <th class="text-center">ID</th>
             <th>Descripcion</th>
-            <th>Codigo Alfanumérico</th>
-            <th>Marca</th>
-            <th>Impuesto</th>
-            <th>Unidad de Medida</th>
+            <th >Codigo Alfanumérico</th>
+            <th >Marca</th>
+            <th class="text-right">Impuesto</th>
+            <th >Unidad de Medida</th>
             <th class="text-center">Estado</th>
             <th class="text-center">Acciones</th> <!-- Agregamos una nueva columna para las acciones -->
           </tr>
@@ -31,10 +31,10 @@
           <tr *ngFor="let item of paginateArticulos()">
             <td class="text-center"><span class="right badge badge-info">{{ item.articulo_id }}</span></td>
             <td>{{ item.descripcion }} </td>
-            <td>{{ item.codigo_alfanumerico }}</td>
-            <td>{{ item.marca_descripcion }}</td>
-            <td>{{ item.impuesto_descripcion }}</td>
-            <td>{{ item.unidad_medida_descripcion }}</td>
+            <td >{{ item.codigo_alfanumerico }}</td>
+            <td >{{ item.marca_descripcion }}</td>
+            <td class="text-right">{{ item.impuesto_descripcion }}</td>
+            <td >{{ item.unidad_medida_descripcion }}</td>
             <td class="text-center">
               <span class="right badge" [ngClass]="item.estado ? 'badge-success' : 'badge-danger'">
                 {{ item.estado ? 'Activo' : 'Inactivo' }}
@@ -43,7 +43,7 @@
             <td class="pr-0 text-center">
               <!-- Botón para mostrar el menú emergente -->
               <div class="dropdown dropleft">
-                <button type="button" class="btn btn-dark btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button type="button" class="btn btn-dark btn-small" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   <i class="fas fa-ellipsis-v"></i>
                 </button>
                 <!-- Menú emergente -->
@@ -59,6 +59,9 @@
                   </a>
                   <a style="cursor: pointer;" class="dropdown-item" data-toggle="modal" data-target="#miModalEliminar" (click)="selectArticulo(item.articulo_id, false)">
                     <i class="fas fa-trash"></i> &nbsp; Eliminar
+                  </a>
+                  <a style="cursor: pointer;" class="dropdown-item" [routerLink]="['/dashboard/articulo_precio', item.articulo_id]">
+                    <i class="fas fa-wallet"></i> &nbsp; Precios
                   </a>
                 </div>
               </div>
