--- a/src/app/components/moneda-list/moneda-list.component.html
+++ b/src/app/components/moneda-list/moneda-list.component.html
@@ -19,6 +19,7 @@
             <th class="text-center">ID</th>
             <th>Descripcion</th>
             <th>Abreviacion</th>
+            <th>Decimal</th>
             <th class="text-center">Acciones</th> <!-- Agregamos una nueva columna para las acciones -->
           </tr>
         </thead>
@@ -27,6 +28,7 @@
             <td class="text-center"><span class="right badge badge-info">{{ item.moneda_id }}</span></td>
             <td>{{ item.descripcion }} </td>
             <td>{{ item.abreviacion }}</td>
+            <td>{{ item.decimal }}</td>
             <td class="pr-0 text-center">
               <!-- Botón para mostrar el menú emergente -->
               <div class="dropdown dropleft">
