--- a/src/app/components/moneda-list/moneda-update/moneda-update.component.html
+++ b/src/app/components/moneda-list/moneda-update/moneda-update.component.html
@@ -37,6 +37,22 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-md-6">
+              <label>Decimales que soporta la moneda</label>
+              <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text"><i class="fas fa-info"></i></span>
+                </div>
+                <input type="number" class="form-control" placeholder="Decimales que soporta la moneda"
+                  formControlName="decimal" required>
+              </div>
+              <!-- Mensaje de error para la descripcion -->
+              <div *ngIf="isFieldInvalid('decimal')" class="text-danger">
+                El decimal de la moneda es obligatoria.
+              </div>
+            </div>
+          </div>
 
           <!-- Botones del formulario -->
 
