--- a/src/styles.css
+++ b/src/styles.css
@@ -24,3 +24,6 @@ select option.hide {
   padding: 0.15rem 0.4rem; /* Ajusta el relleno según tu preferencia */
   font-size: 0.675rem; /* Ajusta el tamaño de la fuente según tu preferencia */
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
