--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -177,6 +177,22 @@
             </div>
             <!-- /.col -->
           </div>
+          <div class="row">
+            <div class="col-12 col-sm-6 col-md-3">
+              <div class="info-box bg-gradient-cyan" [routerLink]="['/dashboard/pedido_venta']" style="cursor: pointer;">
+                <button class="info-box-icon btn btn-dark elevation-1">
+                  <i class="fas fa-window-restore"></i>
+                </button>
+                <div class="info-box-content">
+                  <span class="info-box-text">Acceso a:</span>
+                  <span class="info-box-number">Pedidos de Ventas</span>
+                </div>
+                <!-- /.info-box-content -->
+              </div>
+              <!-- /.info-box -->
+            </div>
+            <!-- /.col -->
+          </div>
         </div>
         <!-- /.card-body -->
       </div>
