--- a/src/app/components/pedido-venta/pedido-venta.component.css
+++ b/src/app/components/pedido-venta/pedido-venta.component.css
@@ -22,3 +22,21 @@
 .sugerencias li:hover {
   background-color: #f2f2f2; /* Color de fondo al pasar el cursor */
 }
+
+.modal-fade-in {
+  animation: fade-in 0.5s;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.hidden-ticket {
+  display: none;
+}
+
