--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -204,6 +204,19 @@
               </div>
               <!-- /.info-box -->
             </div>
+            <div class="col-12 col-sm-6 col-md-3">
+              <div class="info-box bg-gradient-cyan" [routerLink]="['/dashboard/tipo_documento']" style="cursor: pointer;">
+                <button class="info-box-icon btn btn-dark elevation-1">
+                  <i class="fas fa-window-restore"></i>
+                </button>
+                <div class="info-box-content">
+                  <span class="info-box-text">Acceso a:</span>
+                  <span class="info-box-number">Tipos de Documentos</span>
+                </div>
+                <!-- /.info-box-content -->
+              </div>
+              <!-- /.info-box -->
+            </div>
             <!-- /.col -->
           </div>
         </div>
