--- a/src/app/components/tipo-documento-list/tipo-documento-list.component.html
+++ b/src/app/components/tipo-documento-list/tipo-documento-list.component.html
@@ -1,6 +1,6 @@
 <div class="card card-dark">
   <div class="card-header">
-    <h3 class="card-title">Gestión de Marcas</h3>
+    <h3 class="card-title">Gestión de Tipos de Documentos</h3>
   </div>
   <div class="card-body">
 
