--- a/src/app/components/tipo-documento-list/tipo-documento-update/tipo-documento-update.component.html
+++ b/src/app/components/tipo-documento-list/tipo-documento-update/tipo-documento-update.component.html
@@ -57,7 +57,7 @@
       <!-- Botones de la ventana modal -->
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-        <button type="button" class="btn btn-primary" [routerLink]="['/dashboard/marca']"
+        <button type="button" class="btn btn-primary" [routerLink]="['/dashboard/tipo_documento']"
           data-dismiss="modal">Confirmar</button>
       </div>
     </div>
